--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
     "@nebula.js/sn-bar-chart": "^1.x",
     "@nebula.js/stardust": "3.1.3",
     "@qlik/sdk": "^0.12.0",
+    "buffer": "^6.0.3",
     "enigma.js": "^2.6.3",
     "parcel": "^2.7.0"
   },
   "devDependencies": {
     "process": "^0.11.10"
-  }
+  },
+  "alias": {
+    "process": false
+ }
 }
